这种方式报错java.lang.OutOfMemoryError: Java heap space